Address Hive storage test review comments