@@ -4556,15 +4556,11 @@ public abstract class BaseHiveConnectorTest
     {
         for (HiveStorageFormat storageFormat : ImmutableList.of(HiveStorageFormat.TEXTFILE, HiveStorageFormat.RCTEXT, HiveStorageFormat.SEQUENCEFILE)) {
             String tableName = "test_insert_with_null_format_" + storageFormat.name().toLowerCase(ENGLISH);
-            assertUpdate(format(
-                    "CREATE TABLE %s (value VARCHAR) WITH (format = '%s', null_format = 'null_value')",
-                    tableName,
-                    storageFormat));
+            assertUpdate("CREATE TABLE %s (value VARCHAR) WITH (format = '%s', null_format = 'null_value')"
+                    .formatted(tableName, storageFormat));
 
             assertUpdate(
-                    format(
-                            "INSERT INTO %s VALUES ('null_value'), (NULL), ('non-null'), (''), ('\\N')",
-                            tableName),
+                    "INSERT INTO %s VALUES ('null_value'), (NULL), ('non-null'), (''), ('\\N')".formatted(tableName),
                     5);
 
             assertThat(query("SELECT * FROM " + tableName))
@@ -8955,7 +8951,7 @@ public abstract class BaseHiveConnectorTest
             }
         }
 
-        List<TimestampTestData> testData = ImmutableList.of(
+        List<TimestampTestData> testData = List.of(
                 new TimestampTestData(
                         1,
                         HiveTimestampPrecision.MILLISECONDS,
@@ -8978,10 +8974,10 @@ public abstract class BaseHiveConnectorTest
                         "2020-01-02 12:01:00.111500",
                         "2020-01-02 12:01:00.111499999"));
 
-        for (HiveStorageFormat format : ImmutableList.of(HiveStorageFormat.ORC, HiveStorageFormat.PARQUET, HiveStorageFormat.RCBINARY, HiveStorageFormat.RCTEXT, HiveStorageFormat.SEQUENCEFILE, HiveStorageFormat.TEXTFILE)) {
-            String tableName = "test_nested_timestamp_container_precision_" + format.name().toLowerCase(ENGLISH);
+        for (HiveStorageFormat storageFormat : List.of(HiveStorageFormat.ORC, HiveStorageFormat.PARQUET, HiveStorageFormat.RCBINARY, HiveStorageFormat.RCTEXT, HiveStorageFormat.SEQUENCEFILE, HiveStorageFormat.TEXTFILE)) {
+            String tableName = "test_nested_timestamp_container_precision_" + storageFormat.name().toLowerCase(ENGLISH);
             try {
-                assertUpdate(format(
+                assertUpdate(
                         """
                         CREATE TABLE %s (
                            id INTEGER,
@@ -8991,55 +8987,45 @@ public abstract class BaseHiveConnectorTest
                            nested ARRAY(MAP(TIMESTAMP, ROW(col ARRAY(TIMESTAMP))))
                         )
                         WITH (format = '%s')
-                        """,
-                        tableName,
-                        format));
+                        """.formatted(tableName, storageFormat));
 
                 for (TimestampTestData entry : testData) {
-                    String timestamp = format("TIMESTAMP '%s'", entry.writeValue());
+                    String timestamp = "TIMESTAMP '%s'".formatted(entry.writeValue());
                     assertUpdate(
                             withTimestampPrecision(getSession(), entry.writePrecision()),
-                            format(
-                                    """
-                                    INSERT INTO %s VALUES (
-                                        %s,
-                                        array[%3$s],
-                                        map(array[%3$s], array[%3$s]),
-                                        row(%3$s),
-                                        array[map(array[%3$s], array[row(array[%3$s])])]
-                                    )
-                                    """,
-                                    tableName,
-                                    entry.id(),
-                                    timestamp),
+                            """
+                            INSERT INTO %s VALUES (
+                                %s,
+                                array[%3$s],
+                                map(array[%3$s], array[%3$s]),
+                                row(%3$s),
+                                array[map(array[%3$s], array[row(array[%3$s])])]
+                            )
+                            """.formatted(tableName, entry.id(), timestamp),
                             1);
                 }
 
                 for (HiveTimestampPrecision precision : HiveTimestampPrecision.values()) {
                     Session session = withTimestampPrecision(getSession(), precision);
-                    String type = format("timestamp(%d)", precision.getPrecision());
+                    String type = "timestamp(%d)".formatted(precision.getPrecision());
                     assertQuery(
                             session,
-                            format("SELECT typeof(arr), typeof(map), typeof(row), typeof(nested) FROM %s LIMIT 1", tableName),
-                            format(
-                                    "VALUES ('array(%1$s)', 'map(%1$s, %1$s)', 'row(\"col\" %1$s)', 'array(map(%1$s, row(\"col\" array(%1$s))))')",
-                                    type));
+                            "SELECT typeof(arr), typeof(map), typeof(row), typeof(nested) FROM %s LIMIT 1".formatted(tableName),
+                            "VALUES ('array(%1$s)', 'map(%1$s, %1$s)', 'row(\"col\" %1$s)', 'array(map(%1$s, row(\"col\" array(%1$s))))')".formatted(type));
                     assertQuery(
                             session,
-                            format(
-                                    """
-                                    SELECT
-                                       id,
-                                       CAST(arr[1] AS VARCHAR),
-                                       CAST(map_entries(map)[1][1] AS VARCHAR),
-                                       CAST(map_entries(map)[1][2] AS VARCHAR),
-                                       CAST(row.col AS VARCHAR),
-                                       CAST(map_entries(nested[1])[1][1] AS VARCHAR),
-                                       CAST(map_entries(nested[1])[1][2].col[1] AS VARCHAR)
-                                    FROM %s
-                                    ORDER BY id
-                                    """,
-                                    tableName),
+                            """
+                            SELECT
+                               id,
+                               CAST(arr[1] AS VARCHAR),
+                               CAST(map_entries(map)[1][1] AS VARCHAR),
+                               CAST(map_entries(map)[1][2] AS VARCHAR),
+                               CAST(row.col AS VARCHAR),
+                               CAST(map_entries(nested[1])[1][1] AS VARCHAR),
+                               CAST(map_entries(nested[1])[1][2].col[1] AS VARCHAR)
+                            FROM %s
+                            ORDER BY id
+                            """.formatted(tableName),
                             testData.stream()
                                     .map(entry -> timestampContainerExpectedRow(entry.id(), entry.readValue(precision)))
                                     .collect(joining(", ", "VALUES ", "")));
@@ -9053,10 +9039,7 @@ public abstract class BaseHiveConnectorTest
 
     private static String timestampContainerExpectedRow(int id, String value)
     {
-        return format(
-                "(%s, '%2$s', '%2$s', '%2$s', '%2$s', '%2$s', '%2$s')",
-                id,
-                value);
+        return "(%s, '%2$s', '%2$s', '%2$s', '%2$s', '%2$s', '%2$s')".formatted(id, value);
     }
 
     private void testTimestampPrecisionWrites(Session session, String tableName, BiConsumer<String, HiveTimestampPrecision> populateData)
